# ZYNB

./: .gitignore  README.md  RENAME_THIS_FILE_TO_.env.dev  bot.py  init.sh  init.sql  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
docs/: config.md
src/plugins/AutoSignin/: __init__.py
src/plugins/EnterGroup/: __init__.py  makemsg.py
src/plugins/Helper/: __init__.py
src/plugins/Pixiv/: __init__.py  cfg.py  daomodel.py  dbmgr.py  dbmgr_pg.py  dbmodel.py  imgmgr.py  imgmodel.py
src/plugins/apextool/: README.md  __init__.py  config.py
src/plugins/apextool/Assets/: QQ_EA_ID.json
src/plugins/nonebot_plugin_auto_signin/: __init__.py
src/plugins/nonebot_plugin_enter_group/: __init__.py  makemsg.py
src/plugins/nonebot_plugin_help/: handler.py
src/services/: Config.py  GinoDAOService.py
src/services/GinoDAO/: GinoDAOService.py  __init__.py
