[tool.poetry]
name = "zyzy"
version = "0.1.0"
description = "zyzy"
authors = ["MerkyGao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
httpx = "^0.23.0"
Pillow = "^9.2.0"
nonebot-adapter-onebot = "^2.1.1"
nonebot-plugin-navicat = {git = "https://github.com/synodriver/nonebot_plugin_navicat.git", rev = "main", extras = ["mongodb"]}
nonebot-adapter-telegram = "^0.1.0-beta.2"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
